--- a/Code/WorkSpeed.DesktopClient/Views/FileImportUserControl.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/FileImportUserControl.xaml
@@ -49,11 +49,9 @@
                 </Border>
 
                 <Button x:Name="m_OpenFileButton" Margin="10,0,0,0" 
-                        BorderThickness="0" 
-                        BorderBrush="Transparent"
                         Background="Transparent"
                         Height="30"
-                        Style="{x:Null}"
+                        Style="{StaticResource st_ImageButton}"
                         Command="{Binding OpenCommand}"
                         >
                     <Image Source="{DynamicResource im_OpenFile}" 
