--- a/Code/WorkSpeed.DesktopClient/Views/Design/EmployeeCheckDesign.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/Design/EmployeeCheckDesign.xaml
@@ -9,124 +9,139 @@
              xmlns:models="clr-namespace:WorkSpeed.Data.Models;assembly=WorkSpeed.Data"
              xmlns:collections="clr-namespace:System.Collections;assembly=mscorlib"
              mc:Ignorable="d" 
+             Background="{StaticResource br_Background}"
              d:DesignHeight="450" d:DesignWidth="1200">
     <UserControl.Resources>
 
-        <collections:ArrayList x:Key="Employees">
-            <models:Employee Id="AR15045" Name="Петренко Василий Петрович" IsActive="False" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
+        <collections:ArrayList x:Key="Appointments">
+            <models:Appointment Id="1" InnerName="Старший кладовщик" />
+            <models:Appointment Id="2" InnerName="Заместитель управляющего по отгрузке" />
+            <models:Appointment Id="3" InnerName="Кладовщик на РРЦ" />
+            <models:Appointment Id="4" InnerName="Кладовщик приёмщик" />
+        </collections:ArrayList>
 
-            <models:Employee Id="AR30804" Name="Величко Александр Николаевич"  IsActive="True" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
-
-            <models:Employee Id="AR47406" Name="Грузинов Александр Александрович"  IsActive="False" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
-
-            <models:Employee Id="AR33365" Name="Козлов Владислав Эдуардович"  IsActive="False" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
-
-            <models:Employee Id="AR65487" Name="Киндель Владислав Викторович" IsActive="False" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
-
-            <models:Employee Id="AR02549" Name="Лапердин Дмитрий Анатольевич" IsActive="False" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
-
-            <models:Employee Id="AR65841" Name="Метальников Олег Владимирович" IsActive="True" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
-
-            <models:Employee Id="AR05043" Name="Ридный Максим Александрович" IsActive="False" >
-                <models:Employee.Appointment>
-                    <models:Appointment Id="1" InnerName="Кладовщик на РРЦ" />
-                </models:Employee.Appointment>
-                <models:Employee.Position>
-                    <models:Position Id="1" Name="Крупняк" />
-                </models:Employee.Position>
-                <models:Employee.Rank>
-                    <models:Rank Number="3" />
-                </models:Employee.Rank>
-            </models:Employee>
+        <collections:ArrayList x:Key="Ranks">
+            <models:Rank Number="2" />
+            <models:Rank Number="3" />
+            <models:Rank Number="4" />
+            <models:Rank Number="5" />
         </collections:ArrayList>
 
         <collections:ArrayList x:Key="Positions">
-            <models:Position Name="Мезонин, 1-й этаж." />
-            <models:Position Name="Мезонин, 2-й этаж." />
-            <models:Position Name="Мезонин, 3-й этаж." />
+            <models:Position Name="Крупняк" />
+            <models:Position Name="Мезонин, 1-й этаж" />
+            <models:Position Name="Мезонин, 2-й этаж" />
+            <models:Position Name="Мезонин, 3-й этаж" />
         </collections:ArrayList>
+
+        <local:EmployeeViewModelCollection x:Key="EmployeeCollection" />
+
+        <ObjectDataProvider x:Key="Collection" ObjectInstance="{StaticResource EmployeeCollection}" />
+
+
+        <Style x:Key="st_CenteredCell" TargetType="DataGridCell">
+            <Setter Property="Height" Value="24" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="DataGridCell">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"
+                            />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="st_VerticalCenteredCell" TargetType="DataGridCell">
+            <Setter Property="Height" Value="24" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="DataGridCell">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter Margin="5,0"
+                                              HorizontalAlignment="Left"
+                                              VerticalAlignment="Center"
+                            />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="DataGridColumnHeader">
+            <Setter Property="Foreground" Value="{StaticResource br_ActiveListBoxItem}" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="BorderThickness" Value="0,0,1,1" />
+            <Setter Property="BorderBrush" Value="{StaticResource br_Background}"></Setter>
+            <Setter Property="Background" Value="{StaticResource br_ListBoxBackground}" />
+            <Setter Property="FontWeight" Value="DemiBold" />
+            <Setter Property="SeparatorBrush" Value="{StaticResource br_Background}" />
+            <Setter Property="Height" Value="24"></Setter>
+        </Style>
 
     </UserControl.Resources>
 
-    <Grid>
-        <DataGrid ItemsSource="{Binding Source={StaticResource Employees}}" >
-            <DataGrid.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding}"></TextBlock>
-                    </StackPanel>
-                </DataTemplate>
-            </DataGrid.ItemTemplate>
+    <Grid Width="Auto" Height="Auto">
+
+        <ComboBox x:Name="Box" Visibility="Collapsed" ItemsSource="{Binding EmployeeCollection.Appointments}"></ComboBox>
+
+        <DataGrid ItemsSource="{Binding Source={StaticResource EmployeeCollection}}"
+                  AlternatingRowBackground="{StaticResource br_EvenRow}"
+                  RowBackground="{StaticResource br_OddRow}"
+                  HorizontalGridLinesBrush="{StaticResource br_Background}"
+                  VerticalGridLinesBrush="{StaticResource br_Background}"
+                  AutoGenerateColumns="False"
+                  Width="Auto" Height="Auto"
+                  VerticalAlignment="Center" HorizontalAlignment="Center"
+                  BorderBrush="Transparent"
+                  HeadersVisibility="Column"
+                  >
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Id}" Width="80" 
+                                    CanUserResize="False"
+                                    CellStyle="{StaticResource st_CenteredCell}"
+                                    Header="Код"
+                                    />
+                <DataGridComboBoxColumn Header="Должность" 
+                                        ItemsSource="{Binding Source={StaticResource Appointments}}"     
+                                        SelectedItemBinding="{Binding Appointment}"
+                                        DisplayMemberPath="InnerName"
+                                        MinWidth="180"
+                                        IsReadOnly="False" 
+                                        />
+                <DataGridTextColumn Header="Сотрудник"  
+                                    MinWidth="240"
+                                    Binding="{Binding Name}" 
+                                    CellStyle="{StaticResource st_VerticalCenteredCell}"
+                                    IsReadOnly="True"
+                                    />
+                <DataGridCheckBoxColumn Header="Работает" Width="70"
+                                        Binding="{Binding IsActive}"
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        />
+                <DataGridComboBoxColumn Header="Зона ответственности"
+                                        ItemsSource="{Binding Source={StaticResource Positions}}"     
+                                        SelectedItemBinding="{Binding Appointment}"
+                                        DisplayMemberPath="InnerName"
+                                        MinWidth="180" 
+                                        IsReadOnly="False" 
+                                        />
+                <DataGridComboBoxColumn Header="Ранг" 
+                                        ItemsSource="{Binding Source={StaticResource Ranks}}"     
+                                        SelectedItemBinding="{Binding Rank}"
+                                        DisplayMemberPath="InnerName"
+                                        MinWidth="180" 
+                                        IsReadOnly="False" 
+                                        />
+                <DataGridCheckBoxColumn Header="Курит" Width="70"
+                                        Binding="{Binding IsSmoker}"
+                                        CellStyle="{StaticResource st_CenteredCell}"
+                                        />
+            </DataGrid.Columns>
         </DataGrid>   
     </Grid>
 </UserControl>
