--- a/Code/WorkSpeed.DesktopClient/Views/FastProductivityMainWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/FastProductivityMainWindow.xaml
@@ -15,7 +15,7 @@
 
         mc:Ignorable="d"
         Title="WorkSpeedFastProductivity" Height="450" Width="800"
-        Background="{StaticResource br_Background}"
+        Background="{StaticResource br_MainWindow.Background}"
         >
 
     <Window.Resources>
